tests/semantic_cases/invalid/assignment_string_literal.ob0
MODULE Main;
VAR x;
BEGIN
  x := "Hello"
END Main.
